unpackaged/main/default/objects/Opportunity/fields/Is_Multi_Year_Incentive_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Is_Multi_Year_Incentive_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Multi-Year Incentive Eligible?</label>
    <type>Checkbox</type>
</CustomField>