unpackaged/main/default/objects/Opportunity/fields/Is_Qualified_Pipleine__c.field-meta.xml
<CustomField>
    <fullName>Is_Qualified_Pipleine__c</fullName>
    <formula>NOT(ISBLANK(Qualified_Pipeline_AR_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Qualified Pipleine?</label>
    <type>Checkbox</type>
</CustomField>