unpackaged/main/default/objects/Opportunity/fields/Is_Ready_for_AE_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Is_Ready_for_AE_Qualification__c</fullName>
    <formula>Sales_Qualified_Opportunity__c = FALSE &amp;&amp;
IsClosed = FALSE &amp;&amp; 
RecordType.Name = &quot;Enterprise&quot; &amp;&amp;
Sales_Qualification_Meeting_At__c &lt;= TODAY() &amp;&amp;
NOT(ISBLANK(Sales_Qualified_By__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Ready for AE Qualification?</label>
    <type>Checkbox</type>
</CustomField>