unpackaged/main/default/objects/Opportunity/fields/Is_Red_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Red_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Red Account?</label>
    <type>Checkbox</type>
</CustomField>