unpackaged/main/default/objects/Opportunity/fields/Is_Sourced_by_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Sourced_by_Owner__c</fullName>
    <formula>OwnerId=Sourced_By__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Sourced by Owner?</label>
    <type>Checkbox</type>
</CustomField>