unpackaged/main/default/objects/Opportunity/fields/Is_Stuck__c.field-meta.xml
<CustomField>
    <fullName>Is_Stuck__c</fullName>
    <formula>IF(
  IF(
    IsClosed = FALSE &amp;&amp; Is_In_Sales_Pipeline__c = TRUE &amp;&amp; NOT(ISPICKVAL(Booking_Type__c,&quot;Debook&quot;)),
    CASE(Segment__c,
      &quot;GRW&quot;,
      CASE(StageName,
        &quot;(1) Qualification&quot;,IF(Stage_Duration__c &gt;= 7,1,0),
        &quot;(2) Discovery&quot;,IF(Stage_Duration__c &gt;= 7,1,0),
        &quot;(3) POC Scoping&quot;,IF(Stage_Duration__c &gt;= 14,1,0),
        &quot;(4) Proof of Concept&quot;,IF(Stage_Duration__c &gt;= 14,1,0),
        &quot;(5) Validating Business Case/Negotiating&quot;,IF(Stage_Duration__c &gt;= 7,1,0),
        &quot;(6) Signature&quot;,IF(Stage_Duration__c &gt;= 7,1,0),
        0
      ),
      &quot;MMK&quot;,
      CASE(StageName,
        &quot;(1) Qualification&quot;,IF(Stage_Duration__c &gt;= 14,1,0),
        &quot;(2) Discovery&quot;,IF(Stage_Duration__c &gt;= 14,1,0),
        &quot;(3) POC Scoping&quot;,IF(Stage_Duration__c &gt;= 30,1,0),
        &quot;(4) Proof of Concept&quot;,IF(Stage_Duration__c &gt;= 30,1,0),
        &quot;(5) Validating Business Case/Negotiating&quot;,IF(Stage_Duration__c &gt;= 14,1,0),
        &quot;(6) Signature&quot;,IF(Stage_Duration__c &gt;= 14,1,0),
        0
      ),
      CASE(StageName,
        &quot;(1) Qualification&quot;,IF(Stage_Duration__c &gt;= 21,1,0),
        &quot;(2) Discovery&quot;,IF(Stage_Duration__c &gt;= 21,1,0),
        &quot;(3) POC Scoping&quot;,IF(Stage_Duration__c &gt;= 45,1,0),
        &quot;(4) Proof of Concept&quot;,IF(Stage_Duration__c &gt;= 45,1,0),
        &quot;(5) Validating Business Case/Negotiating&quot;,IF(Stage_Duration__c &gt;= 30,1,0),
        &quot;(6) Signature&quot;,IF(Stage_Duration__c &gt;= 14,1,0),
        0
      )
    ),
    0
  )=1,
  TRUE,
  FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Stuck?</label>
    <type>Checkbox</type>
</CustomField>