unpackaged/main/default/objects/Opportunity/fields/Journey_Meeting_Booked_At_S0__c.field-meta.xml
<CustomField>
    <fullName>Journey_Meeting_Booked_At_S0__c</fullName>
    <description>The date an SDR booked a meeting in the Qualifying Journey. Mapped from the &#39;Pass to Opp&#39; Journey button flow..</description>
    <inlineHelpText>The date an SDR booked a meeting in the Qualifying Journey.</inlineHelpText>
    <label>Journey Meeting Booked At (S0)</label>
    <type>Date</type>
</CustomField>