unpackaged/main/default/objects/Opportunity/fields/Journey_Meeting_Booked_At_S0_Half__c.field-meta.xml
<CustomField>
    <fullName>Journey_Meeting_Booked_At_S0_Half__c</fullName>
    <formula>TEXT(YEAR( Journey_Meeting_Booked_At_S0__c ))

&amp; &quot;-&quot;&amp;

CASE(Month( Journey_Meeting_Booked_At_S0__c ),
1, &quot;H1&quot;,
2, &quot;H1&quot;,
3, &quot;H1&quot;,
4, &quot;H1&quot;,
5, &quot;H1&quot;,
6, &quot;H1&quot;,
7, &quot;H2&quot;,
8, &quot;H2&quot;,
9, &quot;H2&quot;,
10, &quot;H2&quot;,
11, &quot;H2&quot;,
12, &quot;H2&quot;,
&quot;None&quot;)</formula>
    <label>Journey Meeting Booked At (S0) Half</label>
    <type>Text</type>
</CustomField>