unpackaged/main/default/objects/Opportunity/fields/Journey_Meeting_Booked_At_S0_Week__c.field-meta.xml
<CustomField>
    <fullName>Journey_Meeting_Booked_At_S0_Week__c</fullName>
    <formula>CASE(MOD( Journey_Meeting_Booked_At_S0__c  - DATE(1900, 1, 6), 7),
0, Journey_Meeting_Booked_At_S0__c + 0,
1, Journey_Meeting_Booked_At_S0__c + 6,
2, Journey_Meeting_Booked_At_S0__c + 5,
3, Journey_Meeting_Booked_At_S0__c + 4,
4, Journey_Meeting_Booked_At_S0__c + 3,
5, Journey_Meeting_Booked_At_S0__c + 2,
6, Journey_Meeting_Booked_At_S0__c + 1,
NULL)</formula>
    <label>Journey Meeting Booked At (S0) Week</label>
    <type>Date</type>
</CustomField>