unpackaged/main/default/objects/Opportunity/fields/LeanData__Status_Info__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Status_Info__c</fullName>
    <label>State Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>