unpackaged/main/default/objects/Opportunity/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project discontinued</fullName>
            </value>
            <value>
                <fullName>Product gap</fullName>
            </value>
            <value>
                <fullName>Student / personal project</fullName>
            </value>
            <value>
                <fullName>Customer support inquiry</fullName>
            </value>
            <value>
                <fullName>No Committed plan needs</fullName>
            </value>
            <value>
                <fullName>No show to first meeting</fullName>
            </value>
            <value>
                <fullName>Poor use case</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>No development resources</fullName>
            </value>
            <value>
                <fullName>Partnership / reseller inquiry</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Superseded by another opportunity</fullName>
            </value>
            <value>
                <fullName>Company defunct / out of business</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Adding add&#39;l seats (existing agreement)</fullName>
                <isActive>false</isActive>
                <label>Adding add&#39;l seats (existing agreement)</label>
            </value>
            <value>
                <fullName>Self-serve (Cloud)</fullName>
                <isActive>false</isActive>
                <label>Self-serve (Cloud)</label>
            </value>
            <value>
                <fullName>Self-serve (On-prem)</fullName>
                <isActive>false</isActive>
                <label>Self-serve (On-prem)</label>
            </value>
            <value>
                <fullName>Unqualified</fullName>
                <isActive>false</isActive>
                <label>Unqualified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>