unpackaged/main/default/objects/Opportunity/fields/Lost_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Details__c</fullName>
    <label>Lost Reason Details</label>
    <type>TextArea</type>
</CustomField>