unpackaged/main/default/objects/Opportunity/fields/Manager_Churn_Contraction_Best_Case__c.field-meta.xml
<CustomField>
    <fullName>Manager_Churn_Contraction_Best_Case__c</fullName>
    <description>Manager Churn/Contraction Best Case forecast. Quarterly forecast updated weekly.

Primarily used in Sales Manager Shotcaller Retool App.</description>
    <inlineHelpText>Manager Churn/Contraction Best Case forecast. Quarterly forecast updated weekly.

Primarily used in Sales Manager Shotcaller Retool App.</inlineHelpText>
    <label>Manager Churn/Contraction Best Case</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>