unpackaged/main/default/objects/Opportunity/fields/Manager_Churn_Contraction_Likely__c.field-meta.xml
<CustomField>
    <fullName>Manager_Churn_Contraction_Likely__c</fullName>
    <description>Manager Churn/Contraction Likely forecast. Quarterly forecast updated weekly.

Primarily used in Sales Manager Shotcaller Retool App.</description>
    <inlineHelpText>Manager Churn/Contraction Likely forecast. Quarterly forecast updated weekly.

Primarily used in Sales Manager Shotcaller Retool App.</inlineHelpText>
    <label>Manager Churn/Contraction Likely</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>