unpackaged/main/default/objects/Opportunity/fields/Manager_New_ARR_Override__c.field-meta.xml
<CustomField>
    <fullName>Manager_New_ARR_Override__c</fullName>
    <description>Replaces the unweighted New ARR amount entered by the Account Executive. Used for forecasting purposes by Sales Managers.</description>
    <inlineHelpText>Replaces the unweighted New ARR amount entered by the Account Executive. Used for forecasting purposes by Sales Managers.</inlineHelpText>
    <label>Manager New ARR Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>