unpackaged/main/default/objects/Opportunity/fields/Materiality_Category__c.field-meta.xml
<CustomField>
    <fullName>Materiality_Category__c</fullName>
    <formula>CASE(Segment__c,
  &quot;ENT&quot;,
  IF(
    Forecast_New_AR__c &gt;= $CustomMetadata.Business_Automations__mdt.ENT.Material_Deal_Size_XL__c,
    &quot;X-Large&quot;,
    IF(
      Forecast_New_AR__c &gt;= $CustomMetadata.Business_Automations__mdt.ENT.Material_Deal_Size__c,
      &quot;Large&quot;,
      &quot;Standard&quot;
    )
  ),
  &quot;STR&quot;,
  IF(
    Forecast_New_AR__c &gt;= $CustomMetadata.Business_Automations__mdt.STR.Material_Deal_Size_XL__c,
    &quot;X-Large&quot;,
    IF(
      Forecast_New_AR__c &gt;= $CustomMetadata.Business_Automations__mdt.STR.Material_Deal_Size__c,
      &quot;Large&quot;,
      &quot;Standard&quot;
    )
  ),
  &quot;GRW&quot;,
  IF(
    Forecast_New_AR__c &gt;= $CustomMetadata.Business_Automations__mdt.GRW.Material_Deal_Size_XL__c,
    &quot;X-Large&quot;,
    IF(
      Forecast_New_AR__c &gt;= $CustomMetadata.Business_Automations__mdt.GRW.Material_Deal_Size__c,
      &quot;Large&quot;,
      &quot;Standard&quot;
    )
  ),
  &quot;MMK&quot;,
  IF(
    Forecast_New_AR__c &gt;= $CustomMetadata.Business_Automations__mdt.MMK.Material_Deal_Size_XL__c,
    &quot;X-Large&quot;,
    IF(
      Forecast_New_AR__c &gt;= $CustomMetadata.Business_Automations__mdt.MMK.Material_Deal_Size__c,
      &quot;Large&quot;,
      &quot;Standard&quot;
    )
  ),
  &quot;Standard&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Materiality Category</label>
    <type>Text</type>
</CustomField>