unpackaged/main/default/objects/Opportunity/fields/Meeting_Hours_All_L30D__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Hours_All_L30D__c</fullName>
    <label>Meeting Hours: All (L30D)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>