unpackaged/main/default/objects/Opportunity/fields/Meeting_Hours_All_Overall__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Hours_All_Overall__c</fullName>
    <label>Meeting Hours: All (Overall)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>