unpackaged/main/default/objects/Opportunity/fields/Meeting_Hours_All_S2_S6__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Hours_All_S2_S6__c</fullName>
    <label>Meeting Hours: All (S2-S6)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>