unpackaged/main/default/objects/Opportunity/fields/Meeting_Hours_SDR__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Hours_SDR__c</fullName>
    <label>Meeting Hours: SDR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>