unpackaged/main/default/objects/Opportunity/fields/Missing_Services_Reason__c.field-meta.xml
<CustomField>
    <fullName>Missing_Services_Reason__c</fullName>
    <label>Missing Services Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upgrading from deployed SSOP</fullName>
            </value>
            <value>
                <fullName>Lack of budget</fullName>
            </value>
            <value>
                <fullName>Strong internal technical capability</fullName>
            </value>
            <value>
                <fullName>Deployed during PoC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>