unpackaged/main/default/objects/Opportunity/fields/Missing_Services_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Missing_Services_Reason_Details__c</fullName>
    <label>Missing Services Reason Details</label>
    <type>TextArea</type>
</CustomField>