unpackaged/main/default/objects/Opportunity/fields/Name_Entity_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Name_Entity_Prefix__c</fullName>
    <formula>LEFT(IF(
   ISBLANK(Account.Account_Name_Short__c),
   Account.Name,
   Account.Account_Name_Short__c
  ),48)
&amp;IF(ISBLANK(BU_Name__c),NULL,&quot; (&quot;&amp;BU_Name__c&amp;&quot;)&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Entity Prefix</label>
    <type>Text</type>
</CustomField>