unpackaged/main/default/objects/Opportunity/fields/Negative_Consequences__c.field-meta.xml
<CustomField>
    <fullName>Negative_Consequences__c</fullName>
    <label>Negative Consequences</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>