unpackaged/main/default/objects/Opportunity/fields/Negotiation_At__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_At__c</fullName>
    <label>Negotiation At (S5)</label>
    <type>Date</type>
</CustomField>