unpackaged/main/default/objects/Opportunity/fields/New_ARR__c.field-meta.xml
<CustomField>
    <fullName>New_ARR__c</fullName>
    <formula>Total_ARR__c-Renewal_Baseline_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>