unpackaged/main/default/objects/Opportunity/fields/New_ARR_Year_1_at_Close__c.field-meta.xml
<CustomField>
    <fullName>New_ARR_Year_1_at_Close__c</fullName>
    <label>New ARR at Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>