unpackaged/main/default/objects/Opportunity/fields/New_MRR__c.field-meta.xml
<CustomField>
    <fullName>New_MRR__c</fullName>
    <formula>Total_MRR__c -  Renewal_Baseline_MRR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>