unpackaged/main/default/objects/Opportunity/fields/Next_Step_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Date__c</fullName>
    <defaultValue>(Today() + 1)</defaultValue>
    <description>The date on/by which the next step will be accomplished.</description>
    <label>Next Step Date</label>
    <type>Date</type>
</CustomField>