unpackaged/main/default/objects/Opportunity/fields/Next_Step_In_Past__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_In_Past__c</fullName>
    <formula>Next_Step_Date__c &lt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Step In Past?</label>
    <type>Checkbox</type>
</CustomField>