unpackaged/main/default/objects/Opportunity/fields/Num_of_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Line_Items__c</fullName>
    <inlineHelpText>Total number of line items (i.e., products) related to this opportunity</inlineHelpText>
    <label># of Line Items</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>