unpackaged/main/default/objects/Opportunity/fields/Num_of_Revenue_Splits__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Revenue_Splits__c</fullName>
    <label># of Revenue Splits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>