unpackaged/main/default/objects/Opportunity/fields/Opportunity_I_Am_Renewal_Manager__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_I_Am_Renewal_Manager__c</fullName>
    <formula>IF(Renewal_Manager__c = $User.Id,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity I Am Renewal Manager?</label>
    <type>Checkbox</type>
</CustomField>