unpackaged/main/default/objects/Opportunity/fields/Opportunity_ID_case_safe__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID_case_safe__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>18 character case insensitive version of this record&#39;s Salesforce ID</inlineHelpText>
    <label>Opportunity ID (case safe)</label>
    <type>Text</type>
</CustomField>