unpackaged/main/default/objects/Opportunity/fields/Opportunity_Owner_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Tenure__c</fullName>
    <formula>IF(Owner.Months_at_Retool__c &gt;0,&quot;(&quot;&amp;TEXT(ROUND(Owner.Months_at_Retool__c,0))&amp;&quot;) &quot;,NULL)&amp;Owner.FirstName&amp;&quot; &quot;&amp;Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner (Tenure)</label>
    <type>Text</type>
</CustomField>