unpackaged/main/default/objects/Opportunity/fields/Opportunity_Team__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Team__c</fullName>
    <label>Opportunity Team</label>
    <type>TextArea</type>
</CustomField>