unpackaged/main/default/objects/Opportunity/fields/Ops_Notes__c.field-meta.xml
<CustomField>
    <fullName>Ops_Notes__c</fullName>
    <label>Ops Notes</label>
    <type>TextArea</type>
</CustomField>