unpackaged/main/default/objects/Opportunity/fields/Order_Method__c.field-meta.xml
<CustomField>
    <fullName>Order_Method__c</fullName>
    <label>Order Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RevOps</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Auto Close</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>