unpackaged/main/default/objects/Opportunity/fields/Outreach_Sequence_Attributed__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Sequence_Attributed__c</fullName>
    <formula>IF(
NOT(ISBLANK(Outreach_Attributed_Finished_Sequences__c)), 
&quot;Yes&quot;,
&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sequence Attributed?</label>
    <type>Text</type>
</CustomField>