unpackaged/main/default/objects/Opportunity/fields/Override_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Override_Booking_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Booking Date?</label>
    <type>Checkbox</type>
</CustomField>