unpackaged/main/default/objects/Opportunity/fields/Owner_Assigned_At__c.field-meta.xml
<CustomField>
    <fullName>Owner_Assigned_At__c</fullName>
    <label>Owner Assigned At</label>
    <type>DateTime</type>
</CustomField>