unpackaged/main/default/objects/Opportunity/fields/Owner_Region_Subteam__c.field-meta.xml
<CustomField>
    <fullName>Owner_Region_Subteam__c</fullName>
    <formula>IF(ISPICKVAL(Owner_Region__c,&quot;&quot;),&quot;XXXX&quot;,TEXT(Owner_Region__c))&amp;
&quot;-&quot;&amp;
IF(ISPICKVAL(Owner_Subteam__c,&quot;&quot;),&quot;XXX&quot;,TEXT(Owner_Subteam__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Region-Subteam</label>
    <type>Text</type>
</CustomField>