unpackaged/main/default/objects/Opportunity/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <description>[Utilized by Xactly]</description>
    <inlineHelpText>The current user role (if the opportunity is open), or the role at the time the deal was closed, of the opportunity owner.</inlineHelpText>
    <label>Owner Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>