unpackaged/main/default/objects/Opportunity/fields/Owner_Subteam__c.field-meta.xml
<CustomField>
    <fullName>Owner_Subteam__c</fullName>
    <description>[Utilized by Xactly]</description>
    <label>Owner Subteam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Subteam</valueSetName>
    </valueSet>
</CustomField>