unpackaged/main/default/objects/Opportunity/fields/Owner_Subteam_Team__c.field-meta.xml
<CustomField>
    <fullName>Owner_Subteam_Team__c</fullName>
    <formula>TEXT(Owner_Subteam__c) + &quot;-&quot; +
CASE(Owner_Team__c,
  &quot;Technical Account Management&quot;,&quot;TA&quot;,
  &quot;Sales Engineering&quot;,&quot;SE&quot;,
  &quot;Sales Enablement&quot;,&quot;XX&quot;,
  &quot;Sales Development&quot;,&quot;SD&quot;,
  &quot;Sales Account Management&quot;,&quot;AM&quot;,
  &quot;Revenue Operations&quot;,&quot;XX&quot;,
  &quot;Renewal Management&quot;,&quot;RM&quot;,
  &quot;Professional Services&quot;,&quot;PS&quot;,
  &quot;Product Marketing&quot;,&quot;XX&quot;,
  &quot;Product&quot;,&quot;XX&quot;,
  &quot;Partner Sales&quot;,&quot;PA&quot;,
  &quot;Other&quot;,&quot;XX&quot;,
  &quot;Marketing Demand Gen&quot;,&quot;XX&quot;,
  &quot;Leadership&quot;,&quot;XX&quot;,
  &quot;FP&amp;A&quot;,&quot;XX&quot;,
  &quot;Deployed Engineering&quot;,&quot;DE&quot;,
  &quot;Customer Support&quot;,&quot;SU&quot;,
  &quot;Business Operations&quot;,&quot;XX&quot;,
  &quot;Accounting&quot;,&quot;XX&quot;,
  &quot;Account Executives&quot;,&quot;AE&quot;,
  &quot;XX&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Subteam-Team</label>
    <type>Text</type>
</CustomField>