unpackaged/main/default/objects/Opportunity/fields/Pain__c.field-meta.xml
<CustomField>
    <fullName>Pain__c</fullName>
    <description>&lt;a href=&quot;https://retoolconfluence.atlassian.net/wiki/spaces/SAL/pages/45842590/MEDDPICC+sales+methodology&quot; target=&quot;_blank&quot;&gt;Learn more about MEDDPICC&lt;/a&gt;</description>
    <inlineHelpText>What pain is the prospect experiencing? What are the implications of the pain?</inlineHelpText>
    <label>[I] Implied Pain</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>