unpackaged/main/default/objects/Opportunity/fields/Paper_Process__c.field-meta.xml
<CustomField>
    <fullName>Paper_Process__c</fullName>
    <description>&lt;a href=&quot;https://retoolconfluence.atlassian.net/wiki/spaces/SAL/pages/45842590/MEDDPICC+sales+methodology&quot; target=&quot;_blank&quot;&gt;Learn more about MEDDPICC&lt;/a&gt;</description>
    <inlineHelpText>What are the steps/actions that are required to finalize the terms and signature of the contract?</inlineHelpText>
    <label>[P] Paper Process</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>