unpackaged/main/default/objects/Opportunity/fields/Pipeline_Status__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Status__c</fullName>
    <formula>IF(
  IsWon,
  &quot;Won&quot;,
  IF(
    IsClosed = FALSE &amp;&amp; (Sales_Qualified_Opportunity__c = TRUE || Opportunity_Record_Type_Name__c = &quot;Renewal&quot;),
    &quot;Open&quot;,
    IF(
      IsLost__c,
      &quot;Lost&quot;,
      &quot;&quot;
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pipeline Status</label>
    <type>Text</type>
</CustomField>