unpackaged/main/default/objects/Opportunity/fields/Pipeline_Timing_Category__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Timing_Category__c</fullName>
    <label>Pipeline Timing Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create &amp; Close</fullName>
            </value>
            <value>
                <fullName>Pulled In</fullName>
            </value>
            <value>
                <fullName>Starting Pipeline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>